# mosafer

./: .env.example  .gitignore  Dockerfile  PROJECT_REVIEW.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  0d35c4926675_add_passenger_and_add_admin_tables.py  0d52ce81312c_massage.py  0d52ce81312c_schema_fixes.py  2bb649503229_initial_schema.py  2bb649503229_try.py  30ebe16a9775_epic_1.py  3d07861e4485_epic.py  4bc576b22014_epoc2.py  4bc576b22014_epoch_2_updates.py  60eece5c6296_epic_2.py  67b9b4b9f61c_seed_admin_user.py  8f3e9a1b2c4d_epic_2_flights_bookings_tickets.py  9c1f6e2a4b11_epic2_amadeus_alignment.py  9f3c6c2e8b1a_auth_rbac_profile_admin.py  a1b2c3d4e5f6_add_passenger_admin_tables.py  add_password_hash_to_users.py  b7e4c1a92f03_epic3_tickets_local.py  d756bc609e96_epic.py  e9c8816fa3f7_roleto3.py  f256384d0ae8_create_table.py
app/: __init__.py  main.py
app/api/: __init__.py  endPoints.py  endpoints.py
app/core/: __init__.py  cache.py  config.py  file_validation.py  jwt.py  logging.py  rate_limit.py  rbac.py  security.py  ticket_pdf.py  (+1 more)
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.staging
docs/: api-reference.md  load-testing.md
load_tests/: k6_smoke.js
tests/: conftest.py  test_amadeus_service.py  test_auth_integration.py  test_booking_integration.py  test_booking_utils.py  test_epic3_ticket.py  test_main.py  test_payment_webhook_integration.py  test_ticket_scan_integration.py
(+73 files in other folders)
